@@ -46,7 +46,6 @@ if $cygwin ; then
 fi
 
 # Setup JBOSS_HOME
-# Setup JBOSS_HOME
 RESOLVED_JBOSS_HOME=`cd "$DIRNAME/.."; pwd`
 if [ "x$JBOSS_HOME" = "x" ]; then
     # get the full path (without any relative bits)
@@ -66,6 +65,19 @@ if [ "x$JAVA" = "x" ]; then
         JAVA="$JAVA_HOME/bin/java"
     else
         JAVA="java"
+    fi
+fi
+
+$JAVA --add-modules=java.se -version > /dev/null 2>&1 && MODULAR_JDK=true || MODULAR_JDK=false
+
+if [ "$MODULAR_JDK" = "true" ]; then
+    MODULAR_OPTS=`echo $JAVA_OPTS | $GREP "\-\-add\-modules"`
+    if [ "x$MODULAR_OPTS" = "x" ]; then
+        # Set default modular jdk options
+        JAVA_OPTS="$JAVA_OPTS --add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+        JAVA_OPTS="$JAVA_OPTS --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+        JAVA_OPTS="$JAVA_OPTS --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
+        JAVA_OPTS="$JAVA_OPTS --add-modules=java.se"
     fi
 fi
 
